build: adjust dependencies